# LibClient

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENCE  README.md  installDependencies.sh  sonar-project.properties
.github/workflows/: CI.yml  combine.yml  compile.yml  static-analysis.yml
src/: CMakeLists.txt  Callback.cpp  Callback.hpp  LibClient.cpp  LibClient.hpp  Model.hpp  Network.cpp  Network.hpp
src/model/: AIState.cpp  AIState.hpp  ClientState.cpp  ClientState.hpp  GameState.cpp  GameState.hpp  Model.cpp  Model.hpp
src/util/: OrderUtils.hpp
test/: CMakeLists.txt
